<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>be.twofold</groupId>
    <artifactId>valen</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>valen-app</module>
        <module>valen-core</module>
        <module>valen-ui</module>
        <module>valen-lib</module>
        <module>valen-export-gltf</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <flatlaf.version>3.2.5</flatlaf.version>
        <javafx.version>21.0.1</javafx.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Project -->
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-export-gltf</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-ui</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- External -->
            <dependency>
                <groupId>com.formdev</groupId>
                <artifactId>flatlaf</artifactId>
                <version>${flatlaf.version}</version>
            </dependency>
            <dependency>
                <groupId>com.formdev</groupId>
                <artifactId>flatlaf-extras</artifactId>
                <version>${flatlaf.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>2.10.1</version>
            </dependency>
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna-jpms</artifactId>
                <version>5.13.0</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
